--- a/assets/css/main1.css
+++ b/assets/css/main1.css
@@ -1430,16 +1430,16 @@ input, select, textarea {
 		position: absolute;
 		overflow: hidden;
 		background: #000;
-		color: #fff;
+		color: #000;
 		text-align: center;
 		border-top: solid 2px #e5e5e5;
 		border-bottom: solid 2px #e5e5e5;
 		box-shadow: inset 0px -8px 0px 0px #fff, inset 0px 8px 0px 0px #fff;
 		position: relative;
 		text-transform: uppercase;
-		background-image:url(images/banner.jpg);
+		background-image:url(images/Banner.jpg);
 		background-size: cover;
-		padding: 1em 0;
+		padding: 10em 0;
 	}
 
 		#banner p {
