--- a/assets/css/main1.css
+++ b/assets/css/main1.css
@@ -1429,8 +1429,8 @@ input, select, textarea {
 	#banner {
 		position: absolute;
 		overflow: hidden;
-		background: #000;
-		color: #000;
+		background: #fff;
+		color: #fff;
 		text-align: center;
 		border-top: solid 2px #e5e5e5;
 		border-bottom: solid 2px #e5e5e5;
