--- a/assets/css/main4.css
+++ b/assets/css/main4.css
@@ -1439,7 +1439,7 @@ input, select, textarea {
 		border-bottom: solid 2px #e5e5e5;
 		box-shadow: inset 0px -8px 0px 0px #fff, inset 0px 8px 0px 0px #fff;
 		text-transform: uppercase;
-		background-image:url(images/banner.jpg);
+		background-image:url(images/Banner.jpg);
 		background-size: cover;
 		padding: 10em 0;
 	}
