--- a/assets/css/main1.css
+++ b/assets/css/main1.css
@@ -1308,6 +1308,7 @@ input, select, textarea {
 			padding: 20em 0 7em 0;
 			border-bottom: solid 2px #e5e5e9;
 			box-shadow: inset 0px -8px 0px 0px #fff, inset 0px -10px 0px 0px #e5e5e5;
+			background: rgba(0, 0, 0, 0.247);
 		}
 
 		#header h1 {
@@ -1317,19 +1318,28 @@ input, select, textarea {
 			text-shadow: 0.05em 0.075em 0 rgba(0, 0, 0, 0.2);
 			font-size: 3em;
 			letter-spacing: 13px;
+			margin-top: 5vh;
 		}
 
 			#header h1 a {
+				transition: 0.1s;
 				border: 0;
+				color: #fab4ad;
+				-webkit-text-stroke: 1px black;
+			}
+
+			#header h1 a:hover{
+				color: #ed786a;
+				-webkit-text-stroke: 2px black;
 			}
 
 		#header p {
 			text-transform: uppercase;
-			font-weight: 400;
-			color: #464646;
+			font-weight: 500;
+			color: rgb(255, 255, 255);
 			margin: 2.5em 0 0 0;
-			font-size: 1em;
-			letter-spacing: 3px;
+			font-size: 1.3em;
+			letter-spacing: 2px;
 			text-align: center;
 			font-family: Georgia, serif;
 			font-style: oblique;
