--- a/assets/css/main4.css
+++ b/assets/css/main4.css
@@ -1,6 +1,9 @@
 @import url("font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Arvo:700");
 
+.nav-span{
+	font-size: 0.7em;
+}
 
 html, body, div, span,  table, tbody, tfoot, thead, footer, header,  menu, nav, section {
 	margin: 0;
@@ -1307,24 +1310,32 @@ input, select, textarea {
 		
 	}
 	
-		#header > .container {
-			padding: 20em 0 7em 0;
-			border-bottom: solid 2px #e5e5e9;
-			box-shadow: inset 0px -8px 0px 0px #fff, inset 0px -10px 0px 0px #e5e5e5;
+	#header > .container {
+		padding: 20em 0 7em 0;
+		border-bottom: solid 2px #e5e5e9;
+		box-shadow: inset 0px -8px 0px 0px #fff, inset 0px -10px 0px 0px #e5e5e5;
+	}
+
+	#header h1 {
+		font-family: 'Arvo';
+		font-weight: 800;
+		color: #ddd;
+		text-shadow: 0.05em 0.075em 0 rgba(0, 0, 0, 0.2);
+		font-size: 5em;
+		letter-spacing: 13px;
+	}
+
+		#header h1 a {
+			border: 0;
+			transition: 0.1s;
+			color: #fab4ad;
+			-webkit-text-stroke: 1px black;
 		}
 
-		#header h1 {
-			font-family: 'Arvo';
-			font-weight: 800;
-			color: #ddd;
-			text-shadow: 0.05em 0.075em 0 rgba(0, 0, 0, 0.2);
-			font-size: 3em;
-			letter-spacing: 13px;
+		#header h1 a:hover{
+			color: #ed786a;
+			-webkit-text-stroke: 2px black;
 		}
-
-			#header h1 a {
-				border: 0;
-			}
 
 		#header p {
 			text-transform: uppercase;
