--- a/assets/css/main1.css
+++ b/assets/css/main1.css
@@ -16,25 +16,25 @@ html, body, div, span,  table, tbody, tfoot, thead, footer, header,  menu, nav, 
 footer, header, menu, nav, section {
 	display: block;}
 
- #logo{
-	margin-top: 10px;
- }
- .poloska {
-	 background-image: url(images/Poloska.png);
-	 background-position: absolute;
-	 background-position: center;
+#logo{
+margin-top: 10px;
+}
+.poloska {
+	background-image: url(images/Poloska.png);
+	background-position: absolute;
+	background-position: center;
 margin-top: -20px;
 color: #4a6e68;
- }
- .Privet {
-	 font-size: 40pt;
-	 font-family: 'Arvo';
-		font-weight: 300;
-		color: #777;
-		line-height: 1.65em;
+}
+.Privet {
+	font-size: 40pt;
+	font-family: 'Arvo';
+	font-weight: 300;
+	color: #777;
+	line-height: 1.65em;
 	margin-top: -35px;
 	text-shadow: 0 0 0 2;
- }
+}
 
 
 body {
@@ -49,10 +49,10 @@ blockquote, q {
 	quotes: none;
 }
 
-	blockquote:before, blockquote:after, q:before, q:after {
-		content: '';
-		content: none;
-	}
+blockquote:before, blockquote:after, q:before, q:after {
+	content: '';
+	content: none;
+}
 
 table {
 	border-collapse: collapse;
@@ -82,28 +82,24 @@ input, select, textarea {
 
 /* Basic */
 
-	html {
-		box-sizing: border-box;
-	}
+html {
+	box-sizing: border-box;
+}
 
-	*, *:before, *:after {
-		box-sizing: inherit;
-	}
+*, *:before, *:after {
+	box-sizing: inherit;
+}
 
-
-	
-
-
-		bodypolotno *, bodypolotno *:before, bodypolotno *:after {
-			-moz-animation: none !important;
-			-webkit-animation: none !important;
-			-ms-animation: none !important;
-			animation: none !important;
-			-moz-transition: none !important;
-			-webkit-transition: none !important;
-			-ms-transition: none !important;
-			transition: none !important;
-		}
+body *, body *:before, body *:after {
+	-moz-animation: none !important;
+	-webkit-animation: none !important;
+	-ms-animation: none !important;
+	animation: none !important;
+	-moz-transition: none !important;
+	-webkit-transition: none !important;
+	-ms-transition: none !important;
+	transition: none !important;
+}
 
 	body, input, textarea, select {
 		font-family: 'Source Sans Pro';
