--- a/assets/css/main1.css
+++ b/assets/css/main1.css
@@ -1216,6 +1216,26 @@ body *, body *:before, body *:after {
 			background: #fd887a;
 		}
 
+		.custom-checkbox+label {
+			display: inline-flex;
+			align-items: center;
+			user-select: none;
+		}
+		.custom-checkbox+label::before {
+			content: '';
+			display: inline-block;
+			width: 1em;
+			height: 1em;
+			flex-shrink: 0;
+			flex-grow: 0;
+			border: 1px solid #adb5bd;
+			border-radius: 0.25em;
+			margin-right: 0.5em;
+			background-repeat: no-repeat;
+			background-position: center center;
+			background-size: 50% 50%;
+		}
+
 		input[type="button"]:active,
 		input[type="submit"]:active,
 		input[type="reset"]:active,
